fix(docs): remove horizontal scrollbar (#30)
* fix(docs): remove horizontal scrollbar

Remove `overflow-x-scroll` in `styles/globals.css`

* Add overflow-y-scroll to body styles

---------

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -359,7 +359,7 @@
   }
 
   body {
-    @apply bg-background min-h-svh text-foreground flex flex-col overflow-x-scroll scrollbar-thin scrollbar-track-transparent scrollbar-thumb-foreground/20 font-sans;
+    @apply bg-background min-h-svh text-foreground flex flex-col scrollbar-thin overflow-y-scroll scrollbar-track-transparent scrollbar-thumb-foreground/20 font-sans;
   }
 
   main {
